# deliverator

./: .prettierignore  README.md  go.mod  package.json  tailwind.config.ts
.github/workflows/: main.yml
cmd/: deliverator.go
internal/request/: request.go
internal/ui/: main_window.go  request_builder.go
src/: App.svelte  app.css  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/lib/: Request.svelte  RequestBuilder.svelte  RequestList.svelte
src/lib/ui/request/: HeaderList.svelte
